fix(Header): назначен z-index для перекрытия контента

--- a/components/baseComponents/gui/customHeader/CustomHeader.scss
+++ b/components/baseComponents/gui/customHeader/CustomHeader.scss
@@ -20,6 +20,7 @@
   padding: 20px;
   background: none;
   //box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
+  z-index: 1;
 
   @include menu-visible {
     background: #111;
@@ -44,7 +45,7 @@
       size: contain;
     };
 
-    @include is-burger {
+    @include menu-visible {
       display: none;
     }
   }
